--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # Local .terraform directories
 .terraform/
+secret
+grp1-ec2-keypair.pem
+hist.txt
 
 # .tfstate files
 *.tfstate
@@ -13,7 +16,7 @@ crash.*.log
 # password, private keys, and other secrets. These should not be part of version 
 # control as they are data points which are potentially sensitive and subject 
 # to change depending on the environment.
-*.tfvars
+#*.tfvars
 *.tfvars.json
 
 # Ignore override files as they are usually used to override resources locally and so
@@ -35,3 +38,7 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+
+secrets
+certs
+grp1-ec2-keypair.pem
